--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
