--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/style-resources": "^1.0.0",
-    "nuxt": "^2.14.0"
+    "node-sass": "^4.14.1",
+    "nuxt": "^2.14.0",
+    "sass-loader": "^10.0.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
